<resources>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="app_name">School Things APP </string>
    <string name="disciplinas_notas">Minhas Disciplinas e Notas </string>
    <string name="agendamentos_atividades">Minhas Atividades Agendadas</string>
    <string name="meus_dados">Meus Dados</string>
    <string name="sair">SAIR</string>
    <string name="salvar">SALVAR</string>
    <string name="disciplina_extra">Disciplina Extra</string>
    <string name="professor">Professor(a)</string>
    <string name="nome">Nome</string>
    <string name="nota">Nota Bimestral</string>
    <string name="adicionar_notas">ADICIONAR NOTA</string>
    <string name="adicionar_prova_final">ADICIONAR PROVA FINAL</string>
    <string name="editar">EDITAR</string>
    <string name="remover">REMOVER</string>
    <string name="adicionar_anotacao">ADICIONAR ANOTAÇÃO</string>
    <string name="media_pessoal">Média Pessoal</string>
    <string name="media_institucional">Média da Instituição</string>
    <string name="qtd_provas">Quantidade de Bimestres</string>
    <string name="instituicao">Instituição</string>
    <string name="senha">Senha</string>
    <string name="email">Email</string>
    <string name="prova_bimestral">Prova Bimestral</string>
    <string name="recuperacao">Recuperação</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="entrar">Entrar</string>
    <string name="nome2">Nome: </string>
    <string name="email2">Email: </string>
    <string name="instituicao2">Instituição: </string>
    <string name="media_da_instituicao2">Média da Instituição: </string>
    <string name="media_pessoal2">Minha Média Pessoal: </string>
    <string name="qtd_provas2">Quantidade de Provas: </string>
    <string name="nota2">NOTA:</string>
    <string name="recuperacao2">Recuperação: </string>
    <string name="agendar_uma_atividade">Agendar uma Atividade</string>
    <string name="titulo">Título</string>
    <string name="hora">Hora</string>
    <string name="hora2">HORA: </string>
    <string name="data2">DATA: </string>
    <string name="login">Login</string>
    <string name="professor2">Professor(a): </string>
    <string name="adicionar_disciplina">Adicionar Disciplina</string>
    <string name="adicionar_nota_final">Adicionar Nota Final</string>
    <string name="agendar_atividade">Agendar uma Atividade</string>
    <string name="cadastrar_aluno">Cadastrar Usuário</string>
    <string name="notas">Notas</string>
    <string name="nota_da_prova_final">Nota da Prova Final</string>
    <string name="sua_media_para_essa_disciplina">Minha média nessa disciplina:</string>
    <string name="cancelar">CANCELAR</string>
    <string name="remover_todos">REMOVER TODOS</string>
    <string name="remover_todos_os_dados">REMOVER TODOS</string>
</resources>
