<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="30dp"
    tools:context="com.app.boletim.Activities.LoginActivity"
    android:background="@drawable/fundo_simples_claro">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:src="@drawable/logo_st"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Faça seu Login"
        android:textSize="20dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:textStyle="bold"
        />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:inputType="textEmailAddress"
            android:hint="@string/email" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_login_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:inputType="textPassword"
            android:hint="@string/senha" />

    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/btn_logar"
        android:foreground="?android:attr/selectableItemBackgroundBorderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:text="@string/entrar"
        android:textColor="#fff"
        android:layout_marginTop="10dp"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/txt_cadastre_se"
        android:layout_marginTop="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/cadastre_se"
        android:layout_gravity="center" />

</LinearLayout>