<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="com.app.boletim.Activities.CadastroAgendamentosActivity"
    android:background="@drawable/fundo_simples_claro">


    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_disciplina_maior"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        />
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/titulo"
            android:layout_marginTop="10dp"/>

    </android.support.design.widget.TextInputLayout>

    <com.prolificinteractive.materialcalendarview.MaterialCalendarView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/calendario"
        android:layout_width="match_parent"
        android:layout_height="224dp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_hora"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hora"
            android:focusable="false" />

    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/btn_salvar_agendamento"
        android:foreground="?android:attr/selectableItemBackgroundBorderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:text="@string/salvar"
        android:textColor="#fff" />

</LinearLayout>