<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:layout_margin="10dp"
    android:background="@drawable/fundo_simples_claro"
    tools:context="com.app.boletim.Activities.CadastroNotaFinalActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Adicionar Nota Final"
        android:background="@color/colorPrimary"
        android:layout_gravity="center"
        android:textColor="#fff"
        android:gravity="center"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_nota_prova_final"
            android:layout_width="314dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:gravity="center|start"
            android:hint="@string/nota_da_prova_final"
            android:inputType="numberDecimal"
            android:textColor="@color/colorPrimary"
            android:textColorLink="@color/colorPrimary" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_salvar_prova_final"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/salvar"
            android:layout_marginStart="50dp"
            android:textColor="#fff" />

        <Button
            android:id="@+id/btn_cancelar_prova_final"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/cancelar"
            android:layout_marginStart="50dp"
            android:textColor="#fff"
            />




    </LinearLayout>

</LinearLayout>